[project]
name = "pysynapse"
version = "0.0.1"
description = "Python Synapse (Matrix) server admin API module."
dependencies = [
  'requests==2.31.0',
  'validators==0.22.0',
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
